; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_obs_obj_get_data.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_obs_obj_get_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_context_data = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @obs_obj_get_data(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.obs_context_data*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = bitcast i8* %5 to %struct.obs_context_data*
  store %struct.obs_context_data* %6, %struct.obs_context_data** %4, align 8
  %7 = load %struct.obs_context_data*, %struct.obs_context_data** %4, align 8
  %8 = icmp ne %struct.obs_context_data* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %14

10:                                               ; preds = %1
  %11 = load %struct.obs_context_data*, %struct.obs_context_data** %4, align 8
  %12 = getelementptr inbounds %struct.obs_context_data, %struct.obs_context_data* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  store i8* %13, i8** %2, align 8
  br label %14

14:                                               ; preds = %10, %9
  %15 = load i8*, i8** %2, align 8
  ret i8* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
